Fixed theme issue

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="wrapper">
             <header>
                 <h1>Todo</h1>
-                <button class="btn theme-btn light"><img src="./images/icon-moon.svg" alt="moon svg"></button>
+                <button class="btn theme-btn dark"><img src="./images/icon-sun.svg" alt="sun svg"></button>
             </header>
             <form>
                 <span class="round"></span>
