Fixed scrolling issue

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <form>
                 <span class="round"></span>
                 <input type="text" id="todo-input" placeholder="Create a new todo...">
-                <button class="add-todo"></button>
+                <button class="add-todo">+</button>
             </form>
             <div class="todo-container">
                 <ul class="todos">
