changed the position of the add button

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
                 <button class="btn theme-btn dark"><img src="./images/icon-sun.svg" alt="sun svg"></button>
             </header>
             <form>
-                <span class="round"></span>
+                <span class="round"><button class="add-todo"></button></span>
                 <input type="text" id="todo-input" placeholder="Create a new todo...">
-                <button class="add-todo">+</button>
             </form>
             <div class="todo-container">
                 <ul class="todos">
